# swappy_technical_test_paulo_mendes

./: AI.md  README.md
.github/workflows/: deploy.yml
file_server/: Dockerfile  Makefile  README.md  docker-compose.yaml
file_server/src/: index.html
fullstack-app-aws/.github/workflows/: deploy.yml
fullstack-app-aws/backend/: Cargo.toml
fullstack-app-aws/backend/src/: main.rs
fullstack-app-aws/frontend/: package.json
fullstack-app-aws/frontend/src/: App.tsx
fullstack-app-aws/frontend/src/components/: Joke.tsx
fullstack-app-aws/frontend/src/services/: api.ts
problems/: README.md  package-lock.json  package.json  tsconfig.json
problems/src/: graph.ts  time.ts
react/: README.md
react/jokes-web-app/: package-lock.json
react/jokes-web-app/src/: store.ts
react/jokes-web-app/src/components/: SensitiveContentChoice.tsx
react/jokes-web-app/src/services/: api.ts
rust/: README.md
rust/jokes-api/: Cargo.toml
rust/jokes-api/src/: main.rs
terraform/: main.tf
